--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-flexbox-grid": "^2.1.2",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "styled-components": "^3.4.9",
